think I am done

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header id="home">
       <h1>Broadway Design</h1>
 
       <nav>
-        Home <br>
-        Process <br>
-        Work <br>
-        Team <br>
-        Contact <br>
+        <a href="#home">Home</a> <br>
+        <a href="#process">Process</a> <br>
+        <a href="#work">Work</a> <br>
+        <a href="#team">Team</a> <br>
+        <a href="#contact">Contact</a> <br>
       </nav>
     </header>
 
@@ -32,5 +33,35 @@
       <p>We put everything we have into our work.</p>
     </div>
 
+    <div class=design>
+      <span> Designed in New York</span>
+    </div>
+
+    <div id="work">
+      <h2>Portfolio</h2>
+      <p>Coming Soon</p>
+    </div>
+
+    <div id="team">
+      <h2>Team</h2>
+      <p>We're Hiring!</p>
+    </div>
+
+    <div id="contact">
+      <h2>Contact</h2>
+      <p>Phone: (555)-555-5555<br>
+        E-mail: test@example.com<br>
+        Twitter: @test</p>
+    </div>
+
+    <div id="footer">
+      <span class="copy">© Broadway 2017</span>
+        <a href="#home">Home</a>
+        <a href="#process">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+
+    </div>
   </body>
 </html>
